--- a/index.html
+++ b/index.html
@@ -32,5 +32,10 @@
     <script>
       AOS.init({ duration: 1200 });
     </script>
+    
+    <script
+  type="text/javascript"
+  src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
   </body>
 </html>
